<resources>
    <string name="app_name">Easy Team Up</string>
    <string name="image_description">image description</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Log In / Sign Up</string>
    <string name="timeslot">Event Time Slots Available:</string>
    <string name="location">Event Location:</string>
    <string name="noParticipants">Number of Participants:</string>
    <string name="contactEmail">Contact Email:</string>
    <string name='signup'>Sign Up For This Event</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="evt_type">Type</string>
    <string name="evt_name">Event Name</string>
    <string name="evt_time">TBD</string>
    <string name="selectTimeSlots">Select All Time Slots That Suit You!</string>
    <string name="signupBut">Sign Up</string>
    <string name="newEvent">New Event</string>
    <string name="evtName">What is your event name?</string>
    <string-array name="evtTypes">
        <item>Sports</item>
        <item>Study</item>
        <item>Fun</item>
        <item>Other</item>
    </string-array>
    <string name="evtType">Event Type</string>
    <string name="newEvtPrivate">Private Event</string>
    <string name="newEvtPublic">Public Event</string>
    <string name="evtCategory">Event Category</string>
    <string name="evtInvitations">Invite Others By Entering Their Emails</string>
    <string name="evtInvitationsHint">Eg. zhaoxuzh@usc.edu;sherryga@usc.edu</string>
    <string name="evtSignUpDueDate">Event Sign Up Due Date</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="evtTimeSlots">Event Start Time</string>
    <string name="evtDuration">Event Duration</string>
    <string name="detailEvtDuration">Event Duration</string>
    <string name="evtTimeSlotPickerSubmit">Add</string>
    <string name="editEvent">Edit Event</string>
    <string name="evtDurationHours">How long is your event? Eg. 2hrs</string>
    <string name="evtDescript">Tell others more about your event!</string>
    <string name="evtSubmit">Submit Event</string>
    <string name="evtLocation">Where is your event taking place?</string>
    <string name="title_activity_change_profile">ChangeProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="enter_file_name">Enter File Name ...</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="fetch">Fetch</string>
    <string name="todo">TODO</string>

    <!-- Strings used for notification page -->

    <string name="update_profile_information">Update Profile Information</string>
    <string name="withdrawDescription">Withdraw From Your Event</string>
    <string name="timeTerminated">Time Terminated</string>
    <string name="notijoinevent">Joined Your Event</string>
    <string name="foryourevent">For Your Event</string>
    <string name="determineTime">Determine Event Time</string>
    <string name="invitetoevent">Invited You to Join Event</string>
    <string name="switchToMap">Map View</string>
    <string name="switchToList">List View</string>
    <string name="newNotiString">Welcome back!\nYou have %d new Notifications and %d new Invitations!</string>

</resources>