<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ChangeProfile">

<TextView
    android:id="@+id/textViewStatus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Hello World!"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.489"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.435" />

<EditText
    android:id="@+id/editTextTextFileName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="83dp"
    android:layout_marginTop="43dp"
    android:ems="10"
    android:hint="@string/enter_file_name"
    android:inputType="textPersonName"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:autofillHints="" />

<Button
    android:id="@+id/button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="49dp"
    android:layout_marginTop="40dp"
    android:onClick="buttonInsert"
    android:text="@string/insert"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextTextFileName" />

<Button
    android:id="@+id/button2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="103dp"
    android:layout_marginTop="40dp"
    android:onClick="buttonUpdate"
    android:text="@string/update"
    app:layout_constraintStart_toEndOf="@+id/button"
    app:layout_constraintTop_toBottomOf="@+id/editTextTextFileName" />

<Button
    android:id="@+id/button3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="49dp"
    android:layout_marginTop="38dp"
    android:onClick="buttonDelete"
    android:text="@string/delete"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button" />

<Button
    android:id="@+id/button4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="96dp"
    android:layout_marginTop="42dp"
    android:onClick="buttonFetch"
    android:text="@string/fetch"
    app:layout_constraintStart_toEndOf="@+id/button3"
    app:layout_constraintTop_toBottomOf="@+id/button2" />

<ImageView
    android:id="@+id/imageView"
    android:layout_width="222dp"
    android:layout_height="180dp"
    android:layout_marginStart="82dp"
    android:layout_marginTop="39dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textViewStatus"
    app:srcCompat="@drawable/ic_launcher_background"
    android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>