<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/font_grey"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@color/font_grey"
        android:textSize="20sp"
        android:layout_marginTop="54dp"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/font_grey"
        android:textSize="20sp"
        android:layout_marginTop="37dp"
        android:maxLines="1"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/button_round_corners"/>

</LinearLayout>