<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/event_round_corners"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/evtUserPic"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/image_description"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/evtUserName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:text="@string/user_name"
                android:textColor="@color/font_grey"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/evtType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/tag_round_corners"
            android:paddingLeft="7dp"
            android:paddingTop="3dp"
            android:paddingRight="7dp"
            android:paddingBottom="3dp"
            android:text="@string/evt_type"
            android:textColor="@color/font_grey"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/evtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="20dp"
            android:text="@string/evt_name"
            android:textColor="@color/font_grey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/evtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="20dp"
            android:text="@string/evt_time"
            android:textColor="@color/font_grey"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>