<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EventDetail"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/evtDetailUserPic"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:src="@drawable/ic_baseline_person_black"/>
            <TextView
                android:id="@+id/evtDetailUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/font_grey"
                android:textSize="24sp"
                android:layout_marginStart="17dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/evtDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textColor="@color/font_grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/event_round_corners">
            <TextView
                android:id="@+id/evtDetailType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="12sp"
                android:textColor="@color/font_grey"
                android:layout_marginTop="14dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/tag_round_corners"/>
            <TextView
                android:id="@+id/evtDetailDescript"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="14dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="18sp"
                android:textColor="@color/font_grey"
                android:text="@string/app_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/event_round_corners">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:layout_marginStart="14dp"
                android:textColor="@color/font_grey"
                android:textSize="15sp"
                android:text="@string/timeslot"/>
            <ListView
                android:id="@+id/showTimeSlots"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="14dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/event_round_corners">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:layout_marginStart="14dp"
                android:textColor="@color/font_grey"
                android:textSize="15sp"
                android:text="@string/location"/>
            <TextView
                android:id="@+id/evtDetailLoc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="14dp"
                android:layout_marginStart="14dp"
                android:textColor="@color/font_grey"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/event_round_corners">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:layout_marginStart="14dp"
                android:textColor="@color/font_grey"
                android:textSize="15sp"
                android:text="@string/noParticipants"/>
            <TextView
                android:id="@+id/evtDetailNoP"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="14dp"
                android:layout_marginStart="14dp"
                android:textColor="@color/font_grey"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/event_round_corners">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:layout_marginStart="14dp"
                android:textColor="@color/font_grey"
                android:textSize="15sp"
                android:text="@string/contactEmail"/>
            <TextView
                android:id="@+id/evtDetailEmail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="14dp"
                android:layout_marginStart="14dp"
                android:textColor="@color/font_grey"
                android:textSize="24sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/button_round_corners"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/withdrawButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/withdrawDescription"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/button_red_round_corners"/>

        <Button
            android:id="@+id/determineTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/determineTime"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/button_unselected_round_corners"/>

    </LinearLayout>
</ScrollView>